--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -666,11 +666,11 @@ set_target_properties(cangjie-runtime-static PROPERTIES OUTPUT_NAME "cangjie-run
 set(OBJCOPY_PROGRAM objcopy)
 set(STRIP_PROGRAM strip)
 
-install(CODE "execute_process(COMMAND ${OBJCOPY_PROGRAM} --rename-section .text=.text_runtime \
+install(CODE "execute_process(COMMAND ${OBJCOPY_PROGRAM} -D --rename-section .text=.text_runtime \
             ${CMAKE_INSTALL_PREFIX}/lib/${TARGET_ARCH}${SANITIZER_SUBPATH}/libcangjie-runtime.a)"
         COMPONENT cangjie-runtime)
 if(CMAKE_BUILD_TYPE MATCHES "Release" OR CMAKE_BUILD_TYPE MATCHES "MinSizeRel")
-    install(CODE "execute_process(COMMAND ${STRIP_PROGRAM} --strip-unneeded ${CMAKE_INSTALL_PREFIX}/lib${SANITIZER_SUBPATH}/libcangjie-runtime.a)"
+    install(CODE "execute_process(COMMAND ${STRIP_PROGRAM} -D --strip-unneeded ${CMAKE_INSTALL_PREFIX}/lib${SANITIZER_SUBPATH}/libcangjie-runtime.a)"
         COMPONENT cangjie-runtime)
 endif()
 endif()
